@@ -131,6 +131,7 @@ sub register {
             short => 'Zugriffsrechte erteilen'
           },
           oauthGrantPublicWarn => 'Achtung - dies ist ein öffentlicher Client!',
+          oauthGrantRedirectWarn => 'Die Weiterleitung findet an eine unbekannte Adresse statt',
           createdAt => 'Erstellt am <time datetime="<%= stash("date") %>"><%= stash("date") %></date>.',
           expiresIn => 'Läuft in <%= stash("seconds") %> Sekunden ab.',
           fileSizeExceeded => 'Dateigröße überschritten'
@@ -189,6 +190,7 @@ sub register {
             short => 'Grant access'
           },
           oauthGrantPublicWarn => 'Warning - this is a public client!',
+          oauthGrantRedirectWarn => 'The redirect points to an unknown location',
           createdAt => 'Created at <time datetime="<%= stash("date") %>"><%= stash("date") %></date>.',
           expiresIn => 'Expires in <%= stash("seconds") %> seconds.',
           fileSizeExceeded => 'File size exceeded',
@@ -1133,10 +1135,10 @@ sub register {
         _set_no_cache($c->res->headers);
 
         my $v = $c->validation;
-        $v->required('client_id');
-        $v->required('scope');
-        $v->optional('state');
-        $v->optional('redirect_uri');
+        $v->required('client_id', 'trim');
+        $v->required('scope', 'trim');
+        $v->optional('state', 'trim');
+        $v->optional('redirect_uri', 'trim', 'not_empty')->like(qr/^(http|$)/i);
 
         # Redirect with error
         if ($v->has_error) {
@@ -1174,6 +1176,61 @@ sub register {
         )->then(
           sub {
 
+            # Check, if the client redirect_uri is valid
+            my $redirect_uri_server = $c->stash('redirect_uri_server');
+            my $redirect_uri = $v->param('redirect_uri');
+            my ($server_o, $client_o);
+
+            # Both exist
+            if ($redirect_uri_server && $redirect_uri) {
+              $server_o = Mojo::URL->new($redirect_uri_server);
+              $client_o = Mojo::URL->new($redirect_uri);
+
+              # Host not valid - take registered URI
+              if ($server_o->host ne $client_o->host) {
+                $c->notify(warn => 'redirect_uri host differs from registered host');
+                $client_o = $server_o;
+              }
+
+              # Port not valid - take registered URI
+              elsif (($server_o->port // '') ne ($client_o->port // '')) {
+                $c->notify(warn => 'redirect_uri port differs from registered port');
+                $client_o = $server_o;
+              };
+            }
+
+            # Client sent exists
+            elsif ($redirect_uri) {
+              $client_o = Mojo::URL->new($redirect_uri);
+              $c->stash(redirect_warning => $c->loc('oauthGrantRedirectWarn'))
+            }
+
+            # Server registered exists
+            elsif ($redirect_uri_server) {
+              $client_o = Mojo::URL->new($redirect_uri_server);
+            }
+
+            # Redirect unknown
+            else {
+              $c->notify(error => 'redirect_uri not set');
+              return $c->redirect_to('oauth-settings');
+            };
+
+            # No userinfo allowed
+            if ($client_o->userinfo) {
+              $c->notify(warn => 'redirect_uri contains userinfo');
+              $client_o->userinfo('');
+            };
+
+            # HTTPS warning
+            # if ($client_o->scheme ne 'https') {
+            #   $c->notify(warn => 'redirect_uri is not HTTPS');
+            # };
+
+            # Sign redirection URL
+            $c->stash(redirect_uri => $client_o->to_string);
+            $c->stash(close_redirect_uri => '' . $c->close_redirect_to($client_o));
+
             # Get auth token
             my $auth_token = $c->auth->token;
 
@@ -1208,17 +1265,17 @@ sub register {
         # KorAP and not by the client!
         my $v = $c->validation;
         $v->csrf_protect;
-        $v->required('client_id');
-        $v->required('scope');
-        $v->optional('state');
-        $v->optional('redirect_uri');
+        $v->required('client_id', 'trim');
+        $v->required('scope', 'trim');
+        $v->optional('state', 'trim');
 
-        # WARN! SIGN THIS TO PREVENT OPEN REDIRECT ATTACKS!
-        $v->required('redirect_uri_server');
+        # Only signed redirects are allowed
+        $v->required('redirect_uri', 'trim', 'not_empty')->closed_redirect;
 
         # Render with error
         if ($v->has_error) {
-          my $url = Mojo::URL->new($v->param('redirect_uri_server') || $c->url_for('index'));
+
+          my $url = $c->url_for('oauth-settings');
 
           if ($v->has_error('client_id')) {
             $url->query([error_description => $c->loc('Auth_clientIDFail')]);
@@ -1237,12 +1294,12 @@ sub register {
         };
 
         state $r_url = Mojo::URL->new($c->korap->api)->path('oauth2/authorize');
-        $c->stash(redirect_uri_server => Mojo::URL->new($v->param('redirect_uri_server')));
+        $c->stash(redirect_uri => Mojo::URL->new($v->param('redirect_uri')));
 
         return $c->korap_request(post => $r_url, {} => form => {
           response_type => 'code',
           client_id => $v->param('client_id'),
-          redirect_uri => $v->param('redirect_uri'),
+          redirect_uri => $c->stash('redirect_uri'),
           state => $v->param('state'),
           scope => $v->param('scope'),
         })->then(
@@ -1279,7 +1336,7 @@ sub register {
         )->catch(
           sub {
             my $err_msg = shift;
-            my $url = $c->stash('redirect_uri_server');
+            my $url = $c->stash('redirect_uri');
             if ($err_msg) {
               $url = $url->query([error_description => $err_msg]);
             };
