@@ -17,7 +17,7 @@
         %= hidden_field 'client_name' => stash('client_name')
         %= hidden_field 'state' => stash('state')
         %= hidden_field 'scope' => stash('scope')
-        %= hidden_field 'redirect_uri' => stash('redirect_uri')
+        %= hidden_field 'redirect_uri' => stash('close_redirect_uri')
       % };
       <div>
         %= password_field 'pwd', placeholder => loc('pwd')
